[package]
name = "cache-syncer"
version = "1.1.1"
edition = "2021"

[dependencies]
uluru = "3.0.0"
bitvec = { version = "1", features = ["serde"] }
arrayvec = { version = "0.7", default-features = false }
getrandom = { version = "0.2" }
siphasher = { version = "1", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"], default-features = false }

tokio = { version = "1", features = ["fs", "rt"] }
tracing = "0.1"
# parking_lot = "0.12"
anyhow = "1"
async-lock = "3.3.0"

[dev-dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
